последняя рабочая версия

--- a/WeatherInformer/AddClothesForm.resx
+++ b/WeatherInformer/AddClothesForm.resx
@@ -117,4 +117,156 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAdAAAAFxCAYAAADDHflLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAIfZJREFUeF7tnc1zFdeZh/lzZzObLGYWs5lZOIvMwhuXE/IBTnASY8CxcYKcGCoO
+        xtgmoJTBFeEKBg1IsWQhKchYFgjTo1+rW1xdvX0/+p4+fT6ep+opF5Z079X9OD+95z3n9LECANrx/GlR
+        bF8pisdz+fjN+aJY/DdE3JMABZiF59tF8e37dtik6MPj5kCCmKMEKMCsPL1nh02K/vN/zIEEMUcJUAAX
+        7CzYgZOa//fv5kCCmKMEKIAL1A/99gM7dFJx85Q5iCDmKgEK4IrvH6XdD/3qh+YggpirBCiAS1Luh97/
+        gTmIIOYqAQrgmp0bdgDF7KNz5gCCmLMEKIBrUuyHsn0F8YgEKEAXqB9qBVGs0v9EPCIBCtAVKfVD6X8i
+        HpEABeiS7z61Aykm6X8imhKgAF2SQj9044Q5eCDmLgEK0DXP1u1gisXVH5mDB2LuEqAAPnjyDzucYnD5
+        v8zBAzF3CVAAX8TaD+X8W0RTAhTAFzFe+uxfb5gDByISoAB+ia0fygHyiI0SoAC+ienSZ2uvmAMHIhKg
+        AP2wfcUOrNDkAtqIjRKgAH0QSz+UFbiIjRKgAH2xu2SHVkiyAhexUQIUoE9C7od+c94cNBBxXwIUoE9C
+        PuqPLSyIIyVAAfom1H4oW1gQR0qAAoRAiJc+4yLaiCMlQAFCYeemHWR9+fXL5qCBiPsSoAChEFo/lKuw
+        II6UAAUIie8f2WHWhxyigDhSAhQgNELph3KIAuJICVCAEAnh0mcEKOJICVCAEAmhH3r/B+aggYj7EqAA
+        odL3pc8IUMSREqAAIfPkH3a4+ZBzcBFHSoAChE5f/VBjwEDEFxKgAKHT11F/xoCBiC8kQAFioI9+qDFg
+        IOILCVCAWPB96TNjwEDEFxKgALHw1POCImPAQMQXEqAAMbC7YodclxoDBiK+kAAFCJ1yEVEPhyoYAwYi
+        vpAABQidvraxsA8UcaQEKEDI+O57DspJRIgjJUABQqXvS5sRoIgjJUABQqSvvuegS/9pDhqIuC8BChAi
+        OzftUPMplzNDHCkBChAaffY9B115yRw0EHFfAhQgJDR1a4VZHxKgiCMlQAFC4flu/33PQb9+2Rw0EHFf
+        AhQgFELoew768Lg5aCDivgQoQAjs3rNDrE83TpiDBiLuS4AC9E1f1/sc56Nz5qCBiPsSoAB9Elrfc9Bv
+        zpuDBiLuS4AC9MkTz9f4nFbOw0VslAAF6IvdJTu0QpLTiBAbJUAB+iDUvuew7AVFbJQABeiDUPuew669
+        Yg4ciEiAAvgnlKP6JpGtLIiNEqAAPomh7zkoW1kQGyVAAXwRwiXK2shKXERTAhTAF9tX7IAKXS5rhmhK
+        gAL4IKa+57CrPzIHD8TcPfbs2bPqEw4AnfBs3Q6mWGQhEaLpsc8++6z4/PPPizt37hQrKyvFo0ePCkIV
+        wBGx9j0H5Ug/RNMyQC2/+OKLYnl5uXj8+HE1EgDA1OzcsEMpNu//wBxAEHO2MUCHvXfvXrGxsUF1CjAp
+        Mfc9h+VEIsQjThygg96/f5/KFGAUmrq1gihWubg24hFbBWjtwsJCWZU+efKkGjUAIIm+57AcqIB4xJkC
+        dFBVpQQpwB47N+0Qil36oIiHdBagtQQpZM3uPTt8UpD9oIiHdB6gtQQpZEdqfc9hN0+ZgwhirnYWoFI9
+        0rW1tWp0AUiY57vp9T2H1X5QzsVFPLDTAK1VkFKNQtI8WbBDJzU5FxfxQC8BWquDGdhHCskR2yXKZpHt
+        LIgHeg1QSTUKSVFuWXnfDpsUZRoX8UDvAVqrc3cBoif1vqcl07iIpb0FqNTxgFSjEC0pHdU3jUzjIpb2
+        GqCSKV2Ikpz6nsMyjYtY2nuASl1O7ZtvvqlGJoDASfGovmnlUAXEMAK0lj2jEAXbV+xQyUkOVUAMK0Al
+        i4sgaHLte1pyNi5mbnABKglRCJJn63aQ5OrXL5uDCmIuBhmgkhCFoKDveVQWE2HmBhugkhCFYPjuUztE
+        cverl8yBBTEHgw5Qub6+Xo1gAD1B37NZFhNhxgYfoNrisr29XY1kAJ75/pEdHPhCTibCTA0+QCWHLUAv
+        0PecTKpQzNQoAlR+8cUXXMkF/LJz0w4MPCpVKGZoNAEqdTk0AC/s3rODAm05HxczNKoAlZxWBJ2jqVsr
+        JHC0HKyAmRldgGpREf1Q6Iznu/Q920oVipkZXYDKO3fuVKMdgGPoe84mVShmZJQBKpnKBefQ95zdjRPm
+        QIOYotEGqKZyWZULzii3rLxvhwJOJytyMROjDVB5//79avQDmBH6nu5kXyhmYtQBKrkQN8zMkwU7CLC9
+        VKGYgdEHKAuKYCZ2l+wAwNl8dI4rtWDyRh+gkioUWsFRfd3K9UIxcZMIUKpQaAXh2a26XijbWjBhkwhQ
+        SRUKU8ElyvzIgiJM2GQClCoUpuLZ+v6hCVSh3cuCIkzUZAJUUoVCKwjTbmVBESZqUgHK1VpgZnQB7Z2/
+        74XpFTsMsJ1rr5gDEGLMJhWgnE4ETtEq3af3CFNXMpWLiZlUgErOyIVOUJhqz+j2p3Y44HiZysXETC5A
+        WUwEnUOYtpfD5jEhkwtQyTQueEPXD1WYfnfDDgw86uqPzMEIMTaTDFCmcaE3dleqFb1c2aVRDljAREwy
+        QO/du1eNZgA9wvaYZv/1Bv1QjN4kA1SrcQGCgjA9KltbMHKTDFDJoQoQLAd7TQlT+qEYs8kGKH1QiAKF
+        ae57TZf+0xycEEM32QClDwrRkev2GO0PZVERRmiyAbqwsFCNSgARkluYsqgIIzTZAJXsB4UkyGWv6cPj
+        5iCFGKpJB+j29t5f8QApUYZpwntNv37ZHKgQQzTpAN3Y2KhGHYBESXF7DCGKkZh0gHJ5M8iKlMKU7S0Y
+        gUkH6P3796uRBSAzyjCNfK/pVz80By3EUEw6QLkyC8AeMe815RqiGLBJByhbWQCGqC8SHsv2GB08z0EL
+        GKjeAnR+fr7461//WnzyySfFRx99VHz44YfF5cuXiz//+c/FpUuXiosXL5b+6U9/Kv74xz+a6mv19+nn
+        5AcffFDelm5Tt637uH79enmfBCjACGLZa0qIYqA6D1CFl4JMoaZwU9hZYehD3f+1a9fKIF1dXS22traq
+        kQMADlGHaah7TRWi//xvcxBD7MuZAvRvf/vbQViqGhxVPYbkYKiyVxRgiPrgBq3otcKsT1lYhAE5VYAq
+        MDVFqsDss7J07dWrV4tbt26Vgbq7uzd4AMA+3wU4vcsWFwzEsQGq0FTAxFRhzqoqVO0hpTqF7AkxQCWH
+        LWAAmgE6GJpWwOQkYQpZE2qASkIUe/ZQgGp6ltBsViuJNc0LkA0hB6jcOMFVXLA3j6na1BaQXKZnXajt
+        NzqkgaoUkif0AJVcTxT7cO89d8wKCJxcLT4iSCFZYghQqRBlryj68sHee23vPUeAOlLTu1z9BZIjlgCt
+        ZYUudu3q/x683whQx2rRERUpJENsASrXXqEviu7Ve0rvrYH3GgHakUztQhLEGKCSvii6VO8lvaeG3mcE
+        aMfqxCOCFKIl1gCVOv6PKV2cVU3Zbu29l4z3GAHqQa3a5eLeECUxB2jtw+NUozi9mrJdP2G/pyoJUI/S
+        H4XoSCFApabfOIweJ1XXoTWmbIclQD2rS7ctLi5WoxNA4KQSoLVaBEI1ik0aC4VGSYD2JNUoREFqASpV
+        WXz1kj2AYr5OWHUOSoD2qHqjHA0IQZNigNbSG0Wp98CYXmeTBGgA6lhAgCBJOUClKg5W6ubriBW2k0iA
+        BqJOMmJKF4Ij9QCtZZFRXraYrrUkQANSU7qEKARFLgFay7Ru2uq13Txlv/YtJEADUyG6tbVVjV4APZNb
+        gNYSpGmp1bV6Ta3XegYJ0ADVVhcWF0EQ5BqgtQRp3Co4deH1GfqcoyRAA3ZpaakaxQB6IvcArSVI47Lj
+        4KwlQAOXEIVeIUAPS5CGrV4bHYTQcXDWEqARSIhCbxCgtgpSreS0BnH0r14Lh4uDJpUAjUD1RFlYBL1A
+        gI62PtVIU4bWwI7dqedce3h7CM5aAjQSFaJscQHvEKCTqSBVVbr0H/Zgj+5UtelxmnaUBGhEsk8UvEOA
+        Tu+/3tivSumVurNeFNRjtWlJgEbm1atXq5ENwAME6GxqwCdM2xnAFO04CdAIXVhYqEY3gI4hQN1JmI5X
+        z03goTkoARqprMwFLxCg3ahpXvXx1M/LeQGSfveDnubsZ9P6lgCNVBYVgRcIUD+q4sohUAcDM5Iqc5QE
+        aMTqotwAnUKA9qMqVK3q1XSmAscKo9BVWGpVsn4H/S4RVpjjJEAjd3FxsRrpADqAAA1HherGif3VqLr0
+        WijVah2UKy/tV5Z6jAmGpSUBGrlM5UKnEKDhq/2QCldNiarSU8Cq6lOgKWSlAk4LdCZZwFR/n9TPKqx1
+        W7pN3bbuow7JAPZi9ikBmoBM5UJnEKCIjRKgibi+vl6NeAAOIUARGyVAE5EqFDqBAEVslABNSKpQcA4B
+        itgoAZqQVKHgHAIUsVECNDGpQsEpBChiowRoYlKFglMIUMRGCdAEpQoFZxCgiI0SoAnK1VrAGQQoYqME
+        aILqdKLd3d1qBASYAQIUsVECNFGZxgUnEKCIjRKgiXrr1q1qBASYAQIUsVECNFE1jQswMwQoYqMEaMIy
+        jQszQ4AiNkqAJuydO3eqURCgJQQoYqMEaMJyqALMDAGK2CgBmrD0QWFmCFDERgnQxN3e3q5GQoAWEKCI
+        jRKgibu8vFyNhAAtIEARGyVAE5eFRDATBChiowRo4nKgAswEAdrst+8Xxc7Noni2XhTfP9r/t/V96NZv
+        PyiK59tFsbuy//zr39b3eZAATdzhlbg6I3dra6uc2l1cXCwDdn5+vvy+v/zlL6VafGTdlv6/vn716tXy
+        +/VzOrheVe7q6mqxsbHBGbypQYAetgzNv++H5jAa0K2fQbfuLlVP+AB6PXoIUwI0cRV6CjmFncLP+h7X
+        6j4VsHWwspApYgjQ/UG5KTSH2VmwbwPd+OQf1RM9gjJM914vD2FKgKIXVbWq2lWgUqVGRK4Bur33e2uw
+        niQ0h9m+Yt8mzqYCcVo0tf703t7PdvOaEKDYi6pQNY1MdRo4OQWoQlODrfprs6Cfpx/qVj2fLl4XTf/q
+        dbbuo4UEKPYuYRowqQfoQWg6nhXRQG3dH7bT6nvOgqMwJUDH+N577xVzc3PFhQsXij/84Q/F73//++Ld
+        d98tzp8/f+A777xjWn9d3y/1s7oN3ZZuU7dt3WfOappXi5EgEFILUFUyGjQ1eLoOzWHoh7pR/cwu0ftA
+        74fvbkw9c0CADjgYlgq7UeHoyjpg61C1HleOXr58mUMgQiCFAC1XzlbbTboOzUGeP9277/62WCShnj+f
+        r5mYYntM9gFaB2ZdVVoh51sC9YUEac/EGqBlaE64crZL6Ie2V8/brH3PWSlX9DaHaZYBqmDyVWHOqh6j
+        HmvuYUqQ9kRMAapBLoTQHEY9Vuvx4mj1vIVEGaaHt8dkE6CanlX/MYbQbFKPXZVpzr1TBam2woAnQg9Q
+        9TPbbjfxiaoY6/GjrZ6vkNH2mL33XfIBqspNU6JWIMVs7lWpFhuxatcDIQbowcrZiF5/+qGTq+fJd9+z
+        JckGaKrBOWxdlVrPQerqxCMdRwgdEkqAdrXdxCeclzuZEf1hlFyA5hKcw+YcpDrliGq0I/oKUAWNr+0m
+        PqEfOtrQ+p5jSCZAcw3OYRWkOU7tUo12hM8ALVfO9rDdxDc7N+zfP3dD73saRB+gWlCjfqAVJjmr5yTH
+        xUY6OJ+zdh3SdYCWoRngytkuoR961LLvGd8sUtQBqinLmFfVdq2eG608tp67lNVKXaZ0HdFFgGqwzC00
+        h1E/1HpucjXC8BRRBqgqK6ZrJ1fPVW7VqEJ0a2ureptDa1wFaCzbTXxCP3TfSS5RFijRBShVZ3tzrEbp
+        i87ILAEa43YT3/jsMYeo+sERE02A0ut0o0I0t2pUF/aGlkw7wKew3cQnOfdDI+17DhJFgGrAp+p0p55L
+        QhQmYlyAprrdxCea1rae29RNYDo/+ADVlgzC0716TnPb7kKItsAK0Fy2m/hEfcDh5zllI+57DhJ0gKrf
+        aQ3+6M7c+qKE6JTUAZrjdhPf5NIP1YxFIgQboBrYrQEf3UuIQiOamiU0/aB+oP5QsUInFRPoew5yLMQN
+        94Snf3ML0aWlvWAACI3U+6G6WHVCHKsH0FCu7kF49mduIbq+TmUFAbKzYIdP7CbS9xzkIEBr+6xICc/+
+        zSlEdX4uJxZBkKTWD9XUbYIcCdBa30FKeIZjTiGqK7lwdi4ER0r90MT6noM0BqjUVgcfgynhGZ45hagO
+        oAcIDvULrUCKTS1ES5SRAVrb5cZ7tqqEa077RFdXV6uPBEBAxN4PTbDvOchEAVrruipRKHNIQtiGtkK7
+        K9UPZSoXgkNH/W1fscMpdBPtew4yVYBKhaiLQZXwjMMuZx9Cc35+vvpYAAREjP1QPd5E+56DTB2g0sWg
+        ysHw8ajXynoNU5StLRAk6iNaQRWqCfc9B2kVoFIh2rZHRt8zPnNZVKTriDKVC0ESSz9URz5mQusArVUY
+        WgNRk0zdxmsuU7kc9QdBEsOlz8otK/n8ATpzgMppQvTdd981bwPDV6+d9ZqmJguKIFhC7odm0vccxEmA
+        yklClKnb+M1lKpe9oRAsumC5FWB9q8eVGc4CVI4KUaZu0zGXqVyO+YNg0fVYrRDrSz2eDHEaoLJpYRGr
+        btORKhSgZ0Lqh2bW9xzEeYBaW1z0b+t72/j2228Xv/vd74pz584VZ8+cKc68+Wbx5p6nT58u3njjjX1/
+        +9vit7/5zRH1/+vv0ffr5/Tzuh3d3ltvvVXevnW/eNgcTimiFwpB8/2jMPqhmfU9B3EeoHI4RNsuHKqD
+        sg7JpmB0re5HAav71f3rcViPL2dzWVDEilwImr77oYkf1TeOTgJU1pvvValYX7dU9VcHpqpEK9z6UqFK
+        oB42lyoUIGh2btjh1rWZ9j0H6SxApXpl46pPTZuePXu2rPis4ApVBbwCNecwzaUK5XQiCJo++qFl35NF
+        dp0GaJMKHYVmaFVmW1Wd6vfJMUxzqEKvXbtWfVwAAuXZ3h95VtB1JeFZ4i1A6+nZ2CrNadXvp9/Teg5S
+        NIcqlMVEEAW++qGZ9z0H6TxAFZxltelpAVAolj3TM2eyqEpz2Be6vLxcfWQAAua7T+3Qc6X6rXBAZwGq
+        4CwXA2UWnJap90pz2Bd669at6iMDEDBd9kPpex7BeYDWwWkFSe6mHKRW6KQkq3EhGrrqh+p24RDOAjTX
+        qdo2pji1m8NiIlbjQjSoT2mFYFvpe5o4CVAtmiE4p1PPV0qLjXK46Pbi4mL1sQGIAFf90O292wGTmQJU
+        ezhTX1XbtQrSVKrR1BcTzc/PVx8bgAhQv3LWo/7oe46kVYCWfc4zZ8xAwHbq+dTzaj3fsZj6NC59UIiO
+        WfuhuyvVDYHF1AFaVp2JHIAQmrFXo6OmcRWuWq17vvret86dK3vmb54+Xb6fRr2n6q/rjwxZHvq/9zxp
+        D6pu02dwc4kziI6dBTscx0nfcyxTBShVpx8VLNbzH7q6iEAdNPXl6xSUPv7gUhDXz1uX/diVFf4ihwiZ
+        th+qqVsYy0QBqqlFep1+1TGHMVWjeqznVFEGtPdXf/Dpsbncp8pCIoiSafqh9D0nZmyAMmXbnwoiPf/W
+        6xKCemzl1qUI3h96D+vxzhqmXGQbokX9TCswh91dqn4AxjEyQLXNwhqM0K8hTenW+31jnpFQmGq6+cKF
+        C2ZIjpITiSBqxvVD6XtORWOA0u8My3o6si9VvaV4NKP+SJwmSD/66KPqowMQITrqb/uKHZ70PafmSIDS
+        7wxX9Rd9b3Upp/AzeD/oD5RJFh9dvny5+ugARIrVD9W/6XtOzaEALcOTfmfQ+lpclEtwDjsuSAlQSAL1
+        OQcDlL5nKw4ClPCMxy73izIDse+oqV2AJKj7oTt/r/4HTEsZoIRnfLoOUb0H6HsfVZX48EENAElQ9kM/
+        3fsvF4tvyzHCM15dhWg5Xct7oFE9N4OHRAAAiGMMnHGrENUfQVYwjrOsOrl268TW07oAAOKYNVBgXGph
+        0bQhStXZTj1nqxznBwB7EKCJqC0uVlBa6iAE6zZwcm/dvFl9hAAgVwjQhBx32ELZ72aFrTO1peXx48fV
+        RwkAcoMATUz16RrDkylb5+rybIQoQJ4QoAk6vDJX/07tCL6QVIhubm5WHykAyAUCNEEHV+aqIiU8u1d9
+        5aUHD6qPFQDkAAGaqOp1Kjytr2F33r17t/poAUDqEKCIjiVEAfKAAEXsQEIUIH0IUMQOVE+UhUUAaUOA
+        InakQpQtLgDpQoAidij7RAHShQBF7NhLFy9WHzcASAkCFNGDN65frz5yAJAKBCiiJ7mKC0BaEKCInmRR
+        EUBaEKCIHqUfCpAOBCiiZ2/fvl19/AAgZghQRM9qKvfp06fVRxAAYoUARexBVuUCxA8BitiTrMoFiBsC
+        FLEnWVAEEDcEKGKPUoUCxAsBitijVKEA8UKAIvYsVShAnBCgiD1LFQoQJwQoYgBShQLEBwGKGIDzN25U
+        H0kAiAUCFDEAOZ0IID4IUMRAPP/OO8UnH3/MdC5AJBCgiAFah+nmxkb1UQWA0CBAEQP3vbm54u6XX1Yf
+        WQAIBQIUMRJVld66eZOLcgMEAgGKGKGa3iVIAfqFAEWMVK3cVUXK6l2AfiBAESNXU7v0SAH8Q4AiJqKC
+        lGldAH8QoIiJqWldAOgeAhQxQalGAbqHAEVM2Nu3b1cfdQBwDQGKmLg3rl9npS5ABxCgiBnIlC6AewhQ
+        xExUiG5ublYffQCYFQIUMSN1+MLdu3erjz8AzAIBipihLC4CmB0CFE1/8+tfF6dOnSpee+214sSJE8XP
+        f/7z4mc/+1lx/Pjx4ic/+Unx4x//uHj11VePqP+vr//0pz8t1c/p53/5y18Wv/rVr8rbte4P/ct+UYDZ
+        IECxVOF28uTJMvAUgFY4ulIhrDDW/el+rceDfiREAdpDgGaqKkEFmKrEpmrSl7p/Baqq3V+//rr5eLE7
+        6YkCtIMAzcjB0LSCLBT1+AhTv66urFRDAgBMCgGagZomDT00m1Rlqv6p9XuhO7U6l32iANNBgCaqqk0t
+        3ul7etaV6suqKrV+V3Sj9olyYhHA5BCgiZlacA6rINXvx/RuN166eLEaGgBgHARoIqYenMNSkXYnK3MB
+        JoMATUD1OLveehKqBGk3sqgIYDwEaMRqGjPWxUGu1f5VpnXdST8UYDwEaKS+dvJkNtO1k6rnQ9t0rOcL
+        p/fy5cvF/I0bxScff1z2RhWqtdb3y7NnzpRff29urvyZ+jZuLywUSw8elJUtwQypQIBGJlXnePX8UI2G
+        rYJWAatwVbCyhQZihACNSPU6qTonU71R9o/GpSpXVax3v/ySQIUoIEAj8eSJE2ZQ4Gi1Mtl6PjF8Faiq
+        UFnQBKFCgAautqdogYwVDjiZOs1Iz6P1/GIcKkzViyVMISQI0IBVH09XLrFCAadTU7r0RdNQYco0L4QA
+        ARqoGuxz3dvZlYRoeqoqJUihLwjQACU8u5MQTVOt6GV6F3xDgAYm4dm9hGi6EqTgEwI0IAlPfxKiaavt
+        MEztQtdEG6Aa/LTPTyfPaKuCVqpqtaUW3WhwlKP2TNbfo033Uj+v29Htab/lqVOnzPvtSsLTv3q+CdG0
+        pUcKXRJ8gGr7gYJS4aaA9B0yCmTdr+5fj6OL7RC6TVbb9qOed7a4pG29ahfANcEFqCoCVYGqCEOtyPS4
+        9Ph0FRAXFcwvfvEL837Qj3otrdcF03LuwgWqUXBKEAGqKVOFSKxTmHWg6vewfr9RcsJQmOo1lapQQ5ji
+        R3fevn27Gv4AZqO3ANUgpEEptbNd9fvo95rkHFY9B9ZtYDzWU/x1sFqvM4Yni4zABV4DVAOMKs1cDkSv
+        K1OrWmHRULqqYtX7nEANW/VGNzc3q6EQYHo6D1At0NBf5xpUrMEmF1WpqGdaPy8KVuv7MC31x6IqVL32
+        LFYK01s3b1bDIcB0dBagGizUM8ql2pxUVZ25/zGRswpTLrMWnoQotMF5gBKciOOtp/fZhxqO6os+ffq0
+        GhoBxuMsQAlOxHYqSOmXhuF7c3MsLoKJmTlACU5EN2pqf7BPjv2oxUWEKEzCTAH62smTBCeiYzW9S0Xa
+        r4QoTEKrANWHm4UwiN1Kj7RfFaL0RGEUUwWopms5dg7Rr/rM6bNXfwa1r1hTvfWRl1rZq21SqlxH7S2u
+        v64/fvUzul21X7QqmJOVbNUTJUShiYkDVFXnqA8nInbnuHB0JScrHVWrcwEsxgYoVSdivmqNQ724Kefp
+        5BvXr1dDJsALRgYox80h4qCqUPUHdY5hyiH0MExjgLLCFhFHWR9PmUuYnj17lrNz4RBHApQpW0Sc1lxW
+        DLMyFwY5FKD6AOivSusDgog4Ti1ASn3x0Scff1wNn5A7BwH6+qlT9DsR0YlaeKQxZTB4UnLpwYNqCIWc
+        KQNU+8DodyKia1Od2lU/lKlcOKbFQtYbHxHRlTqwoT4MIhWtrS07OzvF2tpauWL32rVrxaVLl4q5ubni
+        9OnT5WEVTetL9P/19bfffrtUP6efv3v3brG8vFzeLoTHMevFRER0rVpEqR2W//nnnxefffZZGXgKQOv3
+        dqVCWGGs+1OoQv8QoIjo1ZindVVF65Qm9Xj7bnupalWgLiwsFFtbW9WQDj4hQBHRu6pGY1mtOxia1u8S
+        ipr6JUz9QoAiYm+qN2qFVgjGfNUpVabqn0K3EKCI2Kvaex7KlK6qTYV6KrsS1JdVVQrdQIAiYu9qSrfP
+        EE0tOIdVkGpVL9O7biFAETEIFV7ak24FXFemHpzDUpG6hQBFxKD01RfN+RrHBKkbCFBEDM4uQ1RTxbEu
+        DnKt9q8yrdseAhQRg7SLEOUyjUfVflIdzgDTQ4AiYrC6ClGqzvFqHynV6HQQoIgYtLOGqHqdVJ2Tqd4o
+        +0cnhwBFxODVSUBWOI7z5F74WreHo9WWFxgPAYqIUTjN0X/anqIzd63bwcnUaUZcBWY0BCgiRqGmYSc5
+        bEHfo9ONrNvA6dSULn3RZghQRIxG7dtUdWkFp1R45rq3sysJ0WYIUESMSq2mJTz9SojaEKCIGJ3Di4oI
+        z+4lRI9CgCJilNaLighPfxKihyFAETFKFZqv7w3ohKdfCdEXEKCIGK0ckNCPp0+fZovLHgQoIiJOrQ6i
+        zx0CFBERW5n7IfQEKCIitnZ5ebmKk/wgQBERsbVaVNR3P1T3v7a2Vty+fbusijW9rKMI1avV45PWY5f1
+        13U1Gv3Mhx9+WJ4FrEP1dZujIEAREXEmFTw+UdVbB+WocHSlgli/o+5zsOImQBERcWYXFhaqWHGPts0o
+        vFQl6gLg1v37VI9Bj4UARUTEmVWouJzKffjwYTmVqurPur8QJEAREdGJV65cqeKvHQrgutK0bj80CVBE
+        RHRmm1W5+hkt3glhenYaCVBERHSmqsdJUXDGUm1aEqCIiOjUcVVo7MFZS4AiIqJTm6pQraZNIThrCVBE
+        RHTuYBWqxUFaUWt9X8wSoIiI6Ny6ClWQ+jjsoA8JUERE7MSUpmstCVBERMQWEqCIiIgtJEARERFbSIAi
+        IiJO7avF/wMvtj8D5YCnggAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
