--- a/WeatherInformer/UserNameAndPasswordForm.resx
+++ b/WeatherInformer/UserNameAndPasswordForm.resx
@@ -118,6 +118,71 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAWoAAADvCAYAAADb0p48AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAADc9JREFUeF7t3auXXFUWgPH5czGYMQhGDAIEI0BgYjCYGAxmBAaBQWAQIBAMMwHC
+        awgwCUkaUtO7u4tUKru663EfZ9/z+9b61mItSKf6cT5u7zr3nr+sAABNI9QA0DhCDQCNI9QA0DhCDQCN
+        I9QA0DhCDQCNI9QA0DhCDQCNI9QA0DhCDQCNI9QA2uLsi0vxJ0INoB2ePFit7r9/afwzLhBqAO1w/4PV
+        6n//vPTBh+exPrv6F30j1ADa4NFnTyO99tGnV/+yb4QawPyc3Xk+0mvP7l79R/0i1ADm5WIuvTHy2Na8
+        WqgBzMx1kV4b8+qOEWoA8/H48zzMmR3Pq4UawDzE7DkL8nX+/uPVH+4LoQYwPTfNpXfZ6bxaqAFMT8yc
+        sxDv428fXX2QfhBqANNyyFx6l53Nq4UawHTEjDkL7zF2NK8WagDTcOxcepfxsTqZVws1gGl4+HEe3FPs
+        ZF4t1ADGZ4i59C47eCSqUAMYlz9+zgM7pAufVws1gPEYei69y4t59XIfiSrUAMbj4Sd5WMcwZuALRagB
+        jMOYc+ldLnReLdQAhidGHllIp/CPX65exHIQagDDErPiKebSu1zgvFqoAQzLlHPpXcZrWBBCDWA4Ykac
+        hXMOFzSvFmoAw3CxFe/9PJpzuKBHogo1gNOZey69y4XMq4UawOk8+iwPZQsu4JGoQg3gNM7u5IFsyXiN
+        hRFqAMfT2lx6l8Xn1UIN4HhanEvvMo7/KjqvFmoAx9HyXHqXRefVQg3gcCrMpXd5dvfqk6iDUAM4jIu5
+        dKGRx7YF59VCDeAwKkd6bbEjvIQa/RDPK45f2Rf2wJ5JmePRpWNZaF4t1OiHzUX6Z7SXcYvxJMRsd/Nr
+        uASLHOEl1OiHbKGG8WuwaF9P9bn0LovMq4Ua/ZAt1G1jr+3jL0R7m/ifWfb1WoIF5tVCjX7IFul1xhXk
+        w08XeWLIQSxpLr3L+BwbRqjRD9kC3deLaH9SZqY5GPH5Zl+PJdrw91ao0Q/Z4jzGXqK91Ln0LuNzbXRH
+        kFCjH7LFearxZlREO3ZELG3bX+yMyT7nJdvovFqo0Q/ZwhzapWz762EuvcsGj/ASavRDtijHtOq2v3i9
+        2efTk429gSzU6IdsQU5lRLvCtr/e5tK7bGxeLdToh2xBzmHs1W5121/M27PX3KMxxmoEoUY/ZItxblva
+        QRKz2ew19mwL8+rznw2hRj9kC7El54y2uXRu7OqZ+jefGLnEz0D81hV///nrEGr0w/YibNkpt/3FxzeX
+        3u0U8+r4+PG9ju/5VZw3FWr0w9YPfynH3PZnLn2zYzwS9SLO59/TeKM5ifOmQo1+SBZASYfc9mcuvb9D
+        zKsjzrH7J76H2d+xQ6FGPyQLoLynbPu72Ip3/ZUcN4yv1bFf5yPivKlQox+SBbAoD932Zy59uPvOq+PN
+        wLi784Q4byrU6IdkASzWm3aQPPos/3O82V3z6j93agz/P0ChRj8kC6ALt6Md8+3sv+P+xtcw2NpGN5ZC
+        jX5IFkB3RlDMpU934q+jUKMfkgVAVlCo0Q/JAiArKNToh2QBkBUUavRDsgDICgo1+iFZAGQFhRr9kCwA
+        soJCjX5IFgBZQaFGPyQLgKygUKMfkgVAVlCo0Q/JAiArKNToh2QBkBUUavRDsgDICgo1+iFZAGQFhRr9
+        kCwAsoJCjX5IFgBZQaFGPyQLgKygUKMfkgXAEf3lvXPfXa1+fHu1+uHWavXdG6vV3Vcv/epvq9V/Xlqt
+        /v3XS798cbX61wu7Xf938Wfiz379yuXHiY8ZH/und1are7cv/87stRRXqNEPyQLgAEYcI5Tfv3UZz3WA
+        s+BOYUQ/Yv7tPy5fU7y24gEXavRDsgB4oJtRjqvaOYN8qPFa4zWv4519fo0q1OiHZAFwDyNq3715eZV6
+        04iimvE5xfik8XALNfohWQBMjKvmmPvG1efSwnyd8bnG5xyf+8/v5l+bmRRq9EOyAHhlxDlGAnGFmUWs
+        R+Nr0Ui0hRr9kCyArhXn/V1He6Y3JYUa/ZAsgC6NeWzsiOhprDGU8TX75rXJZ9pCjX5IFkA3unoe3thF
+        ElfZ2dd7YIUa/ZAsgMUbgY4dG66exzOCHVfZI86yhRr9kCyAxRrRMN6Y3pGCLdToh2QBLM6IRMQiiwin
+        c+BgCzX6IVkAizFGHALdngMFW6jRD8kCKK8ZdA3je3RCsIUa/ZAsgNLGLg6BruMJu0SEGv2QLICSxh5e
+        2+zqGsE+8OpaqNEPyQIoZYw5YidHtvhZzwPm10KNfkgWQBnjKjquxLIFz7ruOQ4RavRDsgCaN66i44lu
+        2SLncrzh6lqo0Q/JAmhaV9F9Gd/rOLYs+VkQavRDsgCa1Sy6X2Mr39bPg1CjH7Z++Js0fv2NMwezBcx+
+        3NoZItToh80gtmj82mtfNNfGz8LVG41CjX7YDmNLxrl92WIlv3tTqNERWSDnNnZ1uHmFNyjU6IcslHMa
+        M0i7OriHQo1+yGI5l/duizT3VqjRD1kw5/DHW9405EEKNfohi+bUxhPvkoVIXqdQox+ycE6pnR08UqHG
+        8nlytlqd3cnjOZUizRMUaiyTiPPjL1ar3z5are6/n8dzKkWaJyrUWA6bcc6COYcizQEUatTmyYP24rxW
+        pDmQQo16/P7jeZw/bzPOa0WaAyrUqME6zvc/yMPYkrbgcWCFGu0ScX746fxvBh5iPOw/WWjkKQo12iHe
+        DKwY57Xx7A53HHIEhRrzcrHH+e55nD+pGee1HrDEERVqTM/6BpQW9jgPpVNZOKJCjWlocY/zUDrfkCMr
+        1BiPlvc4D6UdHpxAocawXMS58T3OQxlz6WRRkUMr1DidSnuch9Kbh5xQocZxVN5GN4TfvJYuKHIMhRr7
+        03uc15pLc2KFGrv58waU4nuch9RNLZxBocazrPc4P/xYnDPNpTmDQo1n9ziL8249EY8zKdS9suQbUMbQ
+        VjzOqFD3RE97nIf267+nC4icQqFeOk8ei/Op/nArXTzkVAp1Dzw6D3UWIN6sG1vYgELdC66oj9MDl9iA
+        Qt0LMZ+2o+MwvYHIRhTqnoibV7IgMddt4mxEoe6Nh5/lUeKzOvuQDSnUPfLgwzxOfOpXL6cLhpxDoe4R
+        8+rrtR2PjSnUvRIHymaRou14bE6h7hnz6ud1Nc0GFeqeibsWzauf1WyaDSrUvWNe/VQ7PdioQo3Lp+hl
+        4epN+6bZqEKNS+IUlyxeveguRDasUOOSmFf3dIr4tq6m2bBCjaf88XMesaX763vOQWTTCjWepcd5tS15
+        bFyhxvPEwbZZ0JbqnZfSxUG2olDjeXqaV9+7nS4MsiWFGjm9PBLVm4gsoFBjNz3Mqz3XgwUUalzPko/w
+        ciciiyjUuJ4l32Ju7MEiCjVuZqnzamMPFlGosR9LeySqsQcLKdTYnyXNq799PV0QZIsKNfZnSfNqN7mw
+        kEKNw1jCEV6elMdiCjUOp/q82rM9WEyhxuFUP8Lr61fSxUC2qlDjOCrPq23LYzGFGsdT8RZzD2FiQYUa
+        p1FtXm0+zYIKNU6j2iNR3TbOggo1TieO8Koyr7Z/mgUVagxDlXl1sgjI1hVqDEfrR3h5vgeLKtQYjtbn
+        1d+/lS4CsnWFGsPS8iNRPYiJRRVqDE+r8+qvXk4XAdm6Qo1xaPGRqHZ8sKhCjXG4uMW8sXl1sgDICgo1
+        xqOlebVbx1lYoca4tHKLua15LKxQY3xamFd7xgcLK9QYnxYeifrdG+kCICso1JiGuY/wsoeahRVqTMec
+        82qnurCwQo3pmPMILze7sLBCjWmZa14t1CysUGN65rjF3DmJLKxQYx6mnlcLNQsr1JiHqR+J+uWL6QIg
+        KyjUmI8pj/BKfvjJKgo15mWqeXXyw09WUagxP1Mc4ZX88JNVFGrMz8NP8rgOafLDT1ZRqDEvZ0Yf5E0K
+        NeYjbn7JojqGyQ8/WUWhxjw8ObM9j9xTocY8PHLDC7mvQo3pmWouvalQs7BCjWmZ66FMTiBnYYUa0zLX
+        yeSensfCCjWmY+q59KZ3X00XAFlBocY0nN3JAzqVQs3CCjXG52IuPdPIY63DbVlYocb4zHX81qY/3EoX
+        AFlBoca4PP48D+fU/vftdAGQFRRqjMfZ3Tyac/jzu+kCICso1BiHFubS2yYLgKygUGMcfvsoj+WcujuR
+        RRVqDE8rc+ltv34lXQRk6wo1hiXOQcwi2YLfvp4uArJ1hRrD0eJcelNb9FhUocZwTHGk1ineu50uArJ1
+        hRrD0OpcetNf30sXAdm6Qo3TmfJIrVP1uFMWVKhxGlMfqXWqHs7Eggo1TqP1ufS23lBkQYUaxzPHkVqn
+        6lZyFlSocRxzHak1hE4kZzGFGsdRaS69rTk1iynUOJw5j9Qawu/fShcD2apCjcOY+0itITSnZjGFGvvT
+        +i3ih+hJeiykUGN/lhLp0AOaWEihxn5UuEX8EH96J10QZIsKNW6mpSO1htQ2PRZRqHE9S5pLb2v8wSIK
+        Na6nxSO1htL4g0UUauxmaXPpTOMPFlCokdPykVpDavzBAgo1nmfJc+ltjT9YQKHG81R7dOmpfvVyujjI
+        VhRqPEsPc+ltPfuDjSvUeEqlI7WGNM5S9KYiG1aocUm1I7WG1puKbFihxiW9zaW3vXc7XSBkCwo1ah6p
+        NYbeVGSjCnXvVD5Sa2ht1WOjCnXv9DyXznRVzQYV6p6pfqTWGLqqZoMKda8s4UitsXRVzcYU6h7p6Rbx
+        Y3RVzaZ8YfV/Iww3s7/hiLkAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEA0NAAAAEAIADougIAFgAAACgAAADQAAAAoAEAAAEAIAAAAAAAAKQCAMEeAADBHgAAAAAAAAAA
